test/tests/stages/18_structures/invalid_types/invalid_member_operators/bad_pointer_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[61]:
  void
  *
  identifier(malloc)
  (
  unsigned
  long
  identifier(size)
  )
  ;
  struct
  identifier(a)
  {
  int
  identifier(x)
  ;
  int
  identifier(y)
  ;
  }
  ;
  struct
  identifier(b)
  {
  int
  identifier(m)
  ;
  int
  identifier(n)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(a)
  *
  identifier(ptr)
  =
  identifier(malloc)
  (
  sizeof
  (
  struct
  identifier(a)
  )
  )
  ;
  identifier(ptr)
  ->
  identifier(m)
  =
  const int(10)
  ;
  return
  const int(0)
  ;
  }
